[package]
name = "rust-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
# 错误处理
thiserror = "2.0"
# 命令行参数解析
clap = { version = "4.5", features = ["derive"] }
# 配置文件解析
serde = { version = "1.0", features = ["derive"] }
# 异步运行时
tokio = { version = "1", features = ["full"] }
# 网络编程
tokio-stream = "0.1"
# TLS支持 - 使用 native-tls 避免复杂的构建依赖
native-tls = "0.2"
tokio-native-tls = "0.3"
# 日志
log4rs = "1.3.0"
log = "0.4.27"
# 地址解析
net2 = "0.2"
# URL解析
url = "2.5"
# Base64编码/解码
base64 = "0.22"
# 密码哈希
bcrypt = "0.17"
# 配置文件处理
config = "0.15"
toml = "0.8"